--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>
                 Coffee is our passion and we want to bring it to our Students, Faculty, Staff, and greater community. We
                 pick coffee flavors that compliment the season. For more information about the school visit our <a
-                    href="https://www.portledge.org/" target="_blank">Portledge School</a> Home Page. Looking foward to
+                    href="https://www.portledge.org/" target="_blank">Portledge School</a> Home Page. Looking forward to
                 pouring you a cup!
             </p>
 
